fixed coloring on bottom and spacing

--- a/project_6/css/chapter04-project02.css
+++ b/project_6/css/chapter04-project02.css
@@ -1,3 +1,9 @@
+h1, h2, h3, h4, h5, h6 {
+    font-family: Roboto, Helvetica, sans-serif;
+  }
+  body, p, td {
+    font-family: Roboto, 'Times New Roman', Times, serif;
+  }
 #mainMenu {
     text-align: right;
 }
@@ -33,4 +39,73 @@ header h1 {
 
 header span {
     color: orange;
+}
+
+div {
+    text-align: center;
+}
+
+div img {
+    width: 300px;
+    height: 300px;
+    border: solid grey;
+    padding: 10px;
+    margin: 20px;
+}
+
+h2 {
+    font-size: 30px;
+    margin: 10px;
+}
+
+section {
+    margin-left: 40px;
+    margin-right: 40px;
+    border: solid;
+}
+
+
+section h3 {
+    background-image: url('../images/header-background.png');
+    background-size: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+}
+
+.actions {
+    background-color: #607D8B;
+    text-align: left;
+    /* margin: 7px; */
+    padding: 7px;
+}
+
+.actionEdit, .actionFlag {
+    background-color: #FF3D00;
+    padding: 5px;
+    margin: 2px;
+    color: white;
+    padding-left: 30px;
+    background-repeat: no-repeat;
+}
+
+.actionEdit:hover, .actionFlag:hover {
+    background-color: #8F2000;
+}
+
+.actionEdit {
+    background-image: url('../images/edit.png');
+}
+
+.actionFlag {
+    background-image: url('../images/flag.png')
+}
+
+em {
+    color: grey;
+}
+
+footer {
+    margin-top: 10px;
+    background-color: #263238;
 }
